--- a/content/wikimarks/overview.mkd
+++ b/content/wikimarks/overview.mkd
@@ -39,11 +39,11 @@ In this online supplement, we provide:
 
 ## What are you looking for?
 
-* [Code and pipeline to convert any Wikipedia into a machine-readable corpus or Wikimark](code.mkd)
-* [Download just the Wikipedia dumps from 2022](dumps.mkd)
-* [More information about provided wikimarks](wikimarks.mkd)
-* [Download the wikimarks derived from the 2022 Wikipedias](wikimarks.mkd)
-* [Evaluation results of reference baselines](evaluation.mkd)
+* [Code and pipeline to convert any Wikipedia into a machine-readable corpus or Wikimark](code.html)
+* [Download just the Wikipedia dumps from 2022](dumps.html)
+* [More information about provided wikimarks](wikimarks.html)
+* [Download the wikimarks derived from the 2022 Wikipedias](wikimarks.html)
+* [Evaluation results of reference baselines](evaluation.html)
 
 
 ### Data Model
